--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             box-shadow: 0 0 0 0.25rem rgba(100, 181, 246, 0.25);
         }
 
-        .submit-btn {
+        .submit-btn, .back-button {
             background: #64b5f6;
             border: none;
             border-radius: 25px;
@@ -102,7 +102,7 @@
             color: white;
         }
 
-        .submit-btn:hover {
+        .submit-btn:hover, .back-button:hover {
             background: #42a5f5;
             transform: translateY(-2px);
         }
