--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
     <style>
         body {
             font-family: 'Microsoft JhengHei', sans-serif;
@@ -165,6 +166,22 @@
     </style>
 </head>
 <body>
+<!-- 非評審時間畫面 -->
+<div id="nonScoringSection" class="section">
+    <div class="header">
+        <h1>評分系統<span>v1.0.1</span></h1>
+        <div class="current-time" id="currentTime5"></div>
+    </div>
+    <div class="info-card text-center">
+        <div class="completion-message">
+            ⏳ 非評審時間 ⏳
+        </div>
+        <div class="text-center mb-4">
+            目前不在評分時段內，請稍後再試。
+        </div>
+    </div>
+</div>
+
 <!-- 評審選擇畫面 -->
 <div id="judgeSection" class="section active">
     <div class="header">
@@ -253,7 +270,7 @@
         {id: 2, name: '領袖測驗 2', date: '2025/02/24', start: '11:00', end: '13:00'},
         {id: 3, name: '領袖測驗 3', date: '2025/02/24', start: '13:00', end: '15:00'},
         {id: 4, name: '課堂表現 1', date: '2025/02/24', start: '15:00', end: '17:00'},
-        {id: 5, name: '課堂表現 2', date: '2025/02/24', start: '17:00', end: '19:00'},
+        {id: 5, name: '課堂表現 2', date: '2025/02/24', start: '17:00', end: '20:00'},
         {id: 6, name: '課堂表現 3', date: '2025/02/25', start: '09:00', end: '11:00'},
         {id: 7, name: '課堂表現 4', date: '2025/02/25', start: '11:00', end: '13:00'},
         {id: 8, name: '課堂表現 5', date: '2025/02/25', start: '13:00', end: '15:00'},
@@ -292,10 +309,7 @@
         });
 
         if (!availableItem) {
-            const errorMsg = document.getElementById('errorMessage');
-            if (errorMsg) {
-                errorMsg.textContent = `目前不在評分時段 (${currentDate} ${currentTime})`;
-            }
+            showSection('nonScoringSection'); // 顯示 "非評審時間" 畫面
             return false;
         }
 
@@ -414,6 +428,7 @@
         createJudgeButtons();
         updateTimeDisplays();
         setInterval(updateTimeDisplays, 1000);
+        checkTimeSlot(); // 頁面載入時檢查是否在時段內
     };
 
     // 支援 Enter 鍵提交
