--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         }
 
         .header h1 {
-            font-size: 24px;
+            font-size: 3rem;
             margin: 0;
             color: white;
         }
 
         .header h1 span {
-            font-size: 12px;
+            font-size: 1rem;
             color: white;
             float: right;
         }
@@ -37,7 +37,7 @@
             background: rgba(255, 255, 255, 0.3);
             padding: 5px 15px;
             border-radius: 15px;
-            font-size: 14px;
+            font-size: 1rem;
             margin-top: 10px;
             color: white;
         }
@@ -64,7 +64,7 @@
             border: 2px solid #64b5f6;
             border-radius: 15px;
             padding: 20px;
-            font-size: 18px;
+            font-size: 2rem;
             transition: all 0.3s ease;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: relative;
@@ -83,7 +83,7 @@
             right: 8px;
             padding: 2px 8px;
             border-radius: 10px;
-            font-size: 12px;
+            font-size: 1rem;
             font-weight: bold;
         }
 
@@ -98,7 +98,7 @@
         }
 
         .score-input {
-            font-size: 28px;
+            font-size: 2.5rem;
             padding: 15px;
             text-align: center;
             width: 150px;
@@ -126,7 +126,7 @@
             max-width: 80%;
             margin: 20px auto;
             display: block;
-            font-size: 18px;
+            font-size: 2rem;
             transition: all 0.3s ease;
             color: white;
         }
@@ -138,7 +138,7 @@
 
         .completion-message {
             text-align: center;
-            font-size: 24px;
+            font-size: 2rem;
             color: #64b5f6;
             margin: 20px 0;
         }
@@ -177,7 +177,7 @@
 
         .loading-text {
             color: #64b5f6;
-            font-size: 18px;
+            font-size: 2rem;
             font-weight: bold;
         }
 
